[tool.poetry]
name = "credis"
version = "2.0.2"
description = "high performance redis client implemented with cython"
authors = ["yihuang <yi.codeplayer@gmail.com>"]
license = "MIT"
readme = 'README.rst'
repository = "https://github.com/yihuang/credis"
classifiers=[
    "Development Status :: 6 - Mature",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Cython",
    "Topic :: Database"
]

[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[tool.poetry.dependencies]
python = "^3.7"
hiredis = "^2.2.3"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0", "cython", "setuptools>=50.3"]
build-backend = "poetry.core.masonry.api"
